--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
   rev: v0.0.254
   hooks:
   - id: ruff
-    args: [--fix]
+    args: [--fix, --exit-non-zero-on-fix]
 - repo: https://github.com/executablebooks/mdformat
   rev: 0.7.16
   hooks:
