updated environment and everything

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ classifiers = [
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
   "Topic :: Scientific/Engineering"
 ]
 description = "Python version of the OpenPTV library"
@@ -27,20 +28,11 @@ strict = false
 [tool.ruff]
 ignore = [
   # pydocstyle: Missing Docstrings
-  "D1",
-  # pydocstyle: numpy convention
-  "D107",
-  "D203",
-  "D212",
-  "D213",
-  "D402",
-  "D413",
-  "D415",
-  "D416",
-  "D417"
+  "D1"
 ]
-# Black line length is 88, but black does not format comments.
-line-length = 110
+# Same as Black.
+indent-width = 4
+line-length = 88
 select = [
   # pyflakes
   "F",
@@ -52,6 +44,12 @@ select = [
   # pydocstyle
   "D"
 ]
+
+[tool.ruff.lint.pycodestyle]
+max-line-length = 110
+
+[tool.ruff.pydocstyle]
+convention = "numpy"
 
 [tool.setuptools]
 packages = ["openptv_python"]
