--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -22,7 +22,7 @@ jobs:
   pre-commit:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - uses: actions/setup-python@v4
       with:
         python-version: 3.x
@@ -32,42 +32,49 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v4
+      with:
+        python-version: 3.x
     - name: Install conda-merge
       run: |
-        $CONDA/bin/python -m pip install conda-merge
+        python -m pip install conda-merge
     - name: Combine environments
       run: |
         for SUFFIX in ci integration; do
-        $CONDA/bin/conda-merge ci/environment-$SUFFIX.yml environment.yml > ci/combined-environment-$SUFFIX.yml || exit
+        conda-merge ci/environment-$SUFFIX.yml environment.yml > ci/combined-environment-$SUFFIX.yml || exit
         done
-    - name: Archive combined environments
-      uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v3
       with:
         name: combined-environments
         path: ci/combined-environment-*.yml
 
   unit-tests:
-    name: unit-tests (3.10)
+    name: unit-tests
     needs: combine-environments
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.10', '3.11']
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Download combined environments
-      uses: actions/download-artifact@v3
+    - uses: actions/checkout@v4
+    - uses: actions/download-artifact@v3
       with:
         name: combined-environments
         path: ci
-    - name: Install Conda environment with Micromamba
-      uses: mamba-org/provision-with-micromamba@v15
+    - name: Get current date
+      id: date
+      run: echo "date=$(date +%Y-%m-%d)" >> "${GITHUB_OUTPUT}"
+    - uses: mamba-org/setup-micromamba@v1
       with:
         environment-file: ci/combined-environment-ci.yml
         environment-name: DEVELOP
-        channels: conda-forge
-        cache-env: true
-        extra-specs: |
-          python=3.10
+        cache-environment: true
+        cache-environment-key: environment-${{ steps.date.outputs.date }}
+        cache-downloads-key: downloads-${{ steps.date.outputs.date }}
+        create-args: >-
+          python=${{ matrix.python-version }}
     - name: Install package
       run: |
         python -m pip install --no-deps -e .
@@ -80,20 +87,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Download combined environments
-      uses: actions/download-artifact@v3
+    - uses: actions/checkout@v4
+    - uses: actions/download-artifact@v3
       with:
         name: combined-environments
         path: ci
-    - name: Install Conda environment with Micromamba
-      uses: mamba-org/provision-with-micromamba@v15
+    - name: Get current date
+      id: date
+      run: echo "date=$(date +%Y-%m-%d)" >> "${GITHUB_OUTPUT}"
+    - uses: mamba-org/setup-micromamba@v1
       with:
         environment-file: ci/combined-environment-ci.yml
         environment-name: DEVELOP
-        channels: conda-forge
-        cache-env: true
-        extra-specs: |
+        cache-environment: true
+        cache-environment-key: environment-${{ steps.date.outputs.date }}
+        cache-downloads-key: downloads-${{ steps.date.outputs.date }}
+        create-args: >-
           python=3.10
     - name: Install package
       run: |
@@ -107,20 +116,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Download combined environments
-      uses: actions/download-artifact@v3
+    - uses: actions/checkout@v4
+    - uses: actions/download-artifact@v3
       with:
         name: combined-environments
         path: ci
-    - name: Install Conda environment with Micromamba
-      uses: mamba-org/provision-with-micromamba@v15
+    - name: Get current date
+      id: date
+      run: echo "date=$(date +%Y-%m-%d)" >> "${GITHUB_OUTPUT}"
+    - uses: mamba-org/setup-micromamba@v1
       with:
         environment-file: ci/combined-environment-ci.yml
         environment-name: DEVELOP
-        channels: conda-forge
-        cache-env: true
-        extra-specs: |
+        cache-environment: true
+        cache-environment-key: environment-${{ steps.date.outputs.date }}
+        cache-downloads-key: downloads-${{ steps.date.outputs.date }}
+        create-args: >-
           python=3.10
     - name: Install package
       run: |
@@ -142,20 +153,22 @@ jobs:
           extra: -integration
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Download combined environments
-      uses: actions/download-artifact@v3
+    - uses: actions/checkout@v4
+    - uses: actions/download-artifact@v3
       with:
         name: combined-environments
         path: ci
-    - name: Install Conda environment with Micromamba
-      uses: mamba-org/provision-with-micromamba@v15
+    - name: Get current date
+      id: date
+      run: echo "date=$(date +%Y-%m-%d)" >> "${GITHUB_OUTPUT}"
+    - uses: mamba-org/setup-micromamba@v1
       with:
         environment-file: ci/combined-environment${{ matrix.extra }}.yml
         environment-name: DEVELOP${{ matrix.extra }}
-        channels: conda-forge
-        cache-env: true
-        extra-specs: |
+        cache-environment: true
+        cache-environment-key: environment-${{ steps.date.outputs.date }}
+        cache-downloads-key: downloads-${{ steps.date.outputs.date }}
+        create-args: >-
           python=${{ matrix.python-version }}
     - name: Install package
       run: |
@@ -175,22 +188,48 @@ jobs:
       (needs.integration-tests.result == 'success' || needs.integration-tests.result == 'skipped')
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Install packages
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+    - name: Install package
       run: |
-        $CONDA/bin/python -m pip install build twine
-    - name: Build distributions
+        python -m pip install --upgrade pip
+        python -m pip install build twine
+    - name: Build distribution
       run: |
-        $CONDA/bin/python -m build
+        python -m build
     - name: Check wheels
       run: |
         cd dist || exit
-        $CONDA/bin/python -m pip install openptv_python*.whl || exit
-        $CONDA/bin/python -m twine check * || exit
-        $CONDA/bin/python -c "import openptv_python"
-    - name: Publish a Python distribution to PyPI
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-      uses: pypa/gh-action-pypi-publish@release/v1
+        python -m pip install openptv_python*.whl || exit
+        python -m twine check --strict * || exit
+        python -c "import openptv_python" || exit
+        cd ..
+    - uses: actions/upload-artifact@v3
       with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+        name: distribution
+        path: dist
+
+  upload-to-pypi:
+    runs-on: ubuntu-latest
+    needs: distribution
+    if: |
+      always() &&
+      needs.distribution.result == 'success' &&
+      github.event_name == 'push' &&
+      startsWith(github.ref, 'refs/tags')
+    environment:
+      name: pypi
+      url: https://pypi.org/p/openptv-python
+    permissions:
+      id-token: write  # IMPORTANT: this permission is mandatory for trusted publish
+
+    steps:
+    - uses: actions/download-artifact@v3
+      with:
+        name: distribution
+        path: dist
+    - uses: pypa/gh-action-pypi-publish@v1.8.10
+      with:
+        verbose: true
