--- a/environment.yml
+++ b/environment.yml
@@ -5,5 +5,7 @@ channels:
 # EXAMPLE:
 dependencies:
 - numpy
+- scipy
+- matplotlib
 # - package2
 # DO NOT EDIT ABOVE THIS LINE, ADD DEPENDENCIES BELOW AS SHOWN IN THE EXAMPLE
