--- a/environment.yml
+++ b/environment.yml
@@ -8,5 +8,7 @@ dependencies:
 - scipy
 - matplotlib
 - pyyaml
+- pip:
+  - types-PyYAML
 # - package2
 # DO NOT EDIT ABOVE THIS LINE, ADD DEPENDENCIES BELOW AS SHOWN IN THE EXAMPLE
