--- a/tests/testing_fodder/parameters/merged_parameters.yaml
+++ b/tests/testing_fodder/parameters/merged_parameters.yaml
@@ -64,7 +64,7 @@ orient:
   xhflag: 0
   yhflag: 0
 ptv:
-  allCam_flag: 0
+  all_cam_flag: 0
   cal_img_base_name:
   - cal/cam1.tif
   - cal/cam2.tif
