--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [build-system]
-requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
+build-backend = "setuptools.build_meta"
+requires = ["setuptools>=64", "setuptools_scm>=8"]
 
 [project]
 classifiers = [
@@ -9,7 +10,6 @@ classifiers = [
   "Operating System :: OS Independent",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Topic :: Scientific/Engineering"
 ]
@@ -26,13 +26,15 @@ branch = true
 strict = false
 
 [tool.ruff]
+# Same as Black.
+indent-width = 4
+line-length = 88
+
+[tool.ruff.lint]
 ignore = [
   # pydocstyle: Missing Docstrings
   "D1"
 ]
-# Same as Black.
-indent-width = 4
-line-length = 88
 select = [
   # pyflakes
   "F",
@@ -48,13 +50,14 @@ select = [
 [tool.ruff.lint.pycodestyle]
 max-line-length = 110
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "numpy"
 
 [tool.setuptools]
 packages = ["openptv_python"]
 
 [tool.setuptools_scm]
+fallback_version = "999"
 write_to = "openptv_python/version.py"
 write_to_template = '''
 # Do not change! Do not track in version control!
